--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -238,7 +238,8 @@
                                     </div>
                                 </section>
                                 <div class="donation-btn-wrap">
-                                    <div class="donation-btn-container tooltip" th:if="${!isAuthor}">
+<!--                                    <div class="donation-btn-container tooltip" th:if="${!isAuthor}">-->
+                                    <div class="donation-btn-container tooltip">
                                         <a class="donation-btn-style" id="apply-btn">
                                             <span class="visual-correction">지원하기</span>
                                         </a>
