--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -327,5 +327,6 @@
     console.log("가져온 아이디는:{}",volunteer.postId)
 </script>
 <script src="/js/volunteer/event/volunteer-inquiry-event.js"></script>
+<script src="/js/volunteer/layout/volunteer-inquiry-layout.js"></script>
 <script src="/js/main/login-header.js"></script>
 </html>
