댓글 작성자 프로필, 댓글달린총갯수 조회완료

--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -85,8 +85,7 @@
                                 <div class="active tab">내용</div>
                                 <div class="tab">
                                     댓글
-<!--                                    <label class="tab-sticker" th:text="${replyCount}"></label>-->
-                                    <label class="tab-sticker" >0</label>
+                                    <label class="tab-sticker" id="reply-count">0</label>
                                 </div>
                             </div>
 
