report 버그픽스완료

--- a/src/main/resources/static/css/volunteer/volunteer-inquiry.css
+++ b/src/main/resources/static/css/volunteer/volunteer-inquiry.css
@@ -1030,7 +1030,7 @@ p {
     unicode-bidi: isolate;
 }
 
-.alert-btn-complete-1qcb1 {
+.alert-btn-complete {
     margin-top: 52px;
     position: relative;
     display: block;
