--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -160,6 +160,9 @@
                                             class="comment-section"
                                             id="comment-section"
                                     ></section>
+                                    <div class="load-more-container">
+                                        <button id="load-more" style="display: none;">더보기</button>
+                                    </div>
                                 </div>
                             </section>
                             <section class="contest-comment-input" style="width: 500px">
