--- a/src/main/resources/static/css/volunteer/volunteer-inquiry.css
+++ b/src/main/resources/static/css/volunteer/volunteer-inquiry.css
@@ -1073,3 +1073,27 @@ p {
     -webkit-font-smoothing: antialiased;
 }
 
+.edit-button img,
+.delete-button img {
+    width: 24px;
+    height: 24px;
+    object-fit: contain;
+}
+.modify-comment{
+    margin-top: 12px;
+    width: 95%;
+    height: 98px;
+    border: 0;
+    box-sizing: border-box;
+    color: #373f57;
+    font-size: 14px;
+    line-height: 24px;
+    background-color: #fff;
+    resize: none;
+}
+
+.modify-icon, .delete-icon{
+    width: 24px;
+    height: 24px;
+}
+
