댓글 코드 다시 짜는중

--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -172,7 +172,7 @@
                                     id="reply-content"
                                     placeholder="댓글을 입력하세요."
                                 ></textarea>
-                                <button class="submit-comment-button" id="write-button" type="submit" disabled>
+                                <button class="submit-comment-button" type="button" name="btn-anwr-register">
                                     댓글 작성
                                 </button>
                             </section>
@@ -328,7 +328,7 @@
 <script src="/js/volunteer/layout/volunteer-inquiry-layout.js"></script> <!-- 자원봉사 조회 레이아웃 -->
 <script src="/js/volunteer/event/volunteer-inquiry-event.js"></script> <!-- 자원봉사 이벤트 처리 -->
 <script src="/js/reply/reply-layout.js"></script> <!-- 댓글 레이아웃 -->
-<script src="/js/reply/reply-service.js"></script> <!-- 댓글 데이터 처리 -->
-<script src="/js/reply/reply-event.js"></script> <!-- 댓글 이벤트 처리 -->
+<!--<script src="/js/reply/reply-service.js"></script> &lt;!&ndash; 댓글 데이터 처리 &ndash;&gt;-->
+<!--<script src="/js/reply/reply-event.js"></script> &lt;!&ndash; 댓글 이벤트 처리 &ndash;&gt;-->
 
 </html>
