댓글 프로필 다시  작업중

--- a/src/main/resources/templates/volunteer/volunteer-inquiry.html
+++ b/src/main/resources/templates/volunteer/volunteer-inquiry.html
@@ -78,9 +78,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div
-                                class="tabs-navigation-wrapper tab-wrapper"
-                        >
+                        <div class="tabs-navigation-wrapper tab-wrapper">
                             <div class="tab-style tabs">
                                 <div class="active tab">내용</div>
                                 <div class="tab">
@@ -88,7 +86,6 @@
                                     <label class="tab-sticker" id="reply-count">0</label>
                                 </div>
                             </div>
-
                         </div>
                         <div class="content-wrap">
                             <section class="content-container">
