프로필 보이기 성공 수정시작

--- a/src/main/resources/static/css/volunteer/volunteer-inquiry.css
+++ b/src/main/resources/static/css/volunteer/volunteer-inquiry.css
@@ -651,6 +651,7 @@ a {
     cursor: pointer;
     border-radius: 4px;
     background-color:white;
+    margin-left: 5px;
 }
 .edit-button:hover{
     background-color: rgb(244, 245, 248);
